--- a/corona/Covid-19-Macedonia_data_set.ipynb
+++ b/corona/Covid-19-Macedonia_data_set.ipynb
@@ -591,7 +591,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7efea6dbca90>"
+       "<matplotlib.collections.PathCollection at 0x7fc670d0bac8>"
       ]
      },
      "execution_count": 9,
@@ -625,7 +625,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7efea6d94eb8>"
+       "<matplotlib.collections.PathCollection at 0x7fc670ce5fd0>"
       ]
      },
      "execution_count": 10,
@@ -659,7 +659,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7efea6d5a978>]"
+       "[<matplotlib.lines.Line2D at 0x7fc670ca99b0>]"
       ]
      },
      "execution_count": 11,
@@ -819,7 +819,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('corona_macedonia.csv',index=False)"
+    "df.to_csv('corona_north_macedonia.csv',index=False)"
    ]
   },
   {
